--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==2.0
+psycopg2-binary>=2.8
 psycopg2==2.7
 django-suit==0.2.26
+django-heroku==0.3.1
 pillow==7.2.0
 gunicorn
+python-decouple==3.0
